--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "d2": "cd days/day2 && node day2.js",
     "d3": "cd days/day3 && node day3.js",
     "d4": "cd days/day4 && node day4.js",
-    "d5": "cd days/day5 && node day5.js"
+    "d5": "cd days/day5 && node day5.js",
+    "d6": "cd days/day6 && node day6.js"
   },
   "author": "Gonzalo Piérola Azanza",
   "license": "ISC",
